style.css
html,
body {
  margin: 0;
  padding: 0;
}

canvas {
  display: block;
}

::-webkit-scrollbar {
  display: none;
}

input[type='range'] {
  display: block;
  -webkit-appearance: none;
  background-color: #eee;
  /* width: 300px; */
  height: 0.5em;
  width: 15em;
  border-radius: 7.5em;
  margin: 0 auto;
  outline: 0;
}
input[type='range']::-webkit-slider-thumb {
  -webkit-appearance: none;
  background-color: #eee;
  width: 1.5em;
  height: 1.5em;
  border-radius: 50%;
  border: 2px solid #ccc;
  cursor: pointer;
  transition: 0.15s cubic-bezier(0, 0, 0.58, 1);
}

input[type='range']::-moz-range-thumb {
  background-color: #eee;
  width: 1.5em;
  height: 1.5em;
  border-radius: 50%;
  border: 2px solid #ccc;
  cursor: pointer;
  transition: 0.15s cubic-bezier(0, 0, 0.58, 1);
}

input[type='range']::-webkit-slider-thumb:active {
  transform: scale(1.25);
}

input[type='range']::-moz-range-thumb:active {
  transform: scale(1.25);
}

button {
  position: relative;
  display: inline-block;
  cursor: pointer;
  outline: none;
  border: 0;
  vertical-align: middle;
  text-decoration: none;
  /* font-size: inherit;
  font-family: inherit; */
}
button {
  font-weight: 600;
  /* color: #382b22; */
  font-size: 1.1em;
  text-transform: uppercase;
  padding: 0.75em 1em;
  background: #eee;
  /* border: 2px solid #b18597; */
  border-radius: 0.75em;
  transform-style: preserve-3d;
  transition: transform 150ms cubic-bezier(0, 0, 0.58, 1),
    background 150ms cubic-bezier(0, 0, 0.58, 1);
}
button::before {
  position: absolute;
  content: '';
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: #ccc;
  border-radius: inherit;
  /* box-shadow: 0 0 0 2px #6f87ad, 0 0.625em 0 0 #a0c2f9; */
  transform: translate3d(0, 0.5em, -1em);
  transition: transform 150ms cubic-bezier(0, 0, 0.58, 1),
    box-shadow 150ms cubic-bezier(0, 0, 0.58, 1);
}
button:hover {
  background: #ccc;
  transform: translate(0, 0.25em);
}
button:hover::before {
  /* box-shadow: 0 0 0 2px #b18597, 0 0.5em 0 0 #ffe3e2; */
  transform: translate3d(0, 0.25em, -1em);
}
button:active {
  background: #eee;
  transform: translate(0em, 0.5em);
}
button:active::before {
  /* box-shadow: 0 0 0 2px #b18597, 0 0 #ffe3e2; */
  transform: translate3d(0, 0, -1em);
}

